Tue Feb  5 16:53:40 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/BDC/svcs/IO/BDC_IO.h:
        * cuts/BDC/svcs/IO/BDC_IO.cpp:

          The component's registration text is buffered before it is
          printed to the screen. This makes it more efficient, and
          reduces the chance of it being mixed with output generated
          by other threads.

        * cuts/BDC/svcs/baseline/Baseline_Archiver_DB.cpp:
        * cuts/BDC/svcs/baseline/Baseline_Service.cpp:
        * cuts/Component_Registry.cpp:
        * cuts/BDC/BDC_Service_Manager.cpp:
        * cuts/BDC/Benchmark_Data_Collector_exec_i.cpp:

          Initial fix for a bug that was causing the BDC to segfault
          during shutdown time. I believe it was a synchronization
          issue that should be fixed now. Since I couldn't find the
          exact spot, I had to guess!! Man, I need to write some unit
          test for this tool.

Tue Feb  5 01:39:48 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/BDC/svcs/dbase/DBase_Service.cpp:

          Update the SQL statements to call the correct stored
          procedures for setting component uptime/downtime.

Tue Feb  5 01:28:00 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * etc/SQL/CUTS-deployment.sql:

          Updated references and procedures to be consistent with new database
          layout.

Mon Feb  4 23:09:51 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * etc/SQL/CUTS-baseline.sql:
        * etc/SQL/CUTS-create.sql:
        * etc/SQL/CUTS-execution.sql:

          Converted the files to ANSI format.

Mon Feb  4 15:56:52 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * CUTS_CoSMIC.mwc:

          Fixed the -include option for CoSMIC base projects.

        * MDE/GME/paradigms/PICML/be/BE_Assembly_Generator.h:
        * MDE/GME/paradigms/PICML/be/BE_Assembly_Generator.cpp:
        * MDE/GME/paradigms/PICML/be/BE_Deployment_Generator.h: