@@ -1,3 +1,9 @@
+Tue Feb  5 17:04:04 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * cuts/Component_Registry.cpp:
+
+          Removed unused comments.
+
 Tue Feb  5 16:53:40 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * cuts/BDC/svcs/IO/BDC_IO.h:
